--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,7 +3,7 @@
 
 
 /*
-! tailwindcss v3.0.18 | MIT License | https://tailwindcss.com
+! tailwindcss v3.0.22 | MIT License | https://tailwindcss.com
 */
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
@@ -986,6 +986,9 @@ select{
 .mb-4{
   margin-bottom: 1rem;
 }
+.ml-auto{
+  margin-left: auto;
+}
 .mb-5{
   margin-bottom: 1.25rem;
 }
@@ -1004,23 +1007,14 @@ select{
 .mb-12{
   margin-bottom: 3rem;
 }
-.-mt-px{
-  margin-top: -1px;
-}
 .mb-1{
   margin-bottom: 0.25rem;
 }
-.mr-8{
-  margin-right: 2rem;
-}
-.ml-8{
-  margin-left: 2rem;
+.-mt-px{
+  margin-top: -1px;
 }
 .block{
   display: block;
-}
-.inline-block{
-  display: inline-block;
 }
 .flex{
   display: flex;
@@ -1061,14 +1055,14 @@ select{
 .h-20{
   height: 5rem;
 }
+.h-40{
+  height: 10rem;
+}
 .h-89{
   height: 89px;
 }
 .h-756{
   height: 756px;
-}
-.h-40{
-  height: 10rem;
 }
 .h-11{
   height: 2.75rem;
@@ -1082,14 +1076,14 @@ select{
 .w-5{
   width: 1.25rem;
 }
+.w-12{
+  width: 3rem;
+}
 .w-full{
   width: 100%;
 }
 .w-0{
   width: 0px;
-}
-.w-12{
-  width: 3rem;
 }
 .w-6{
   width: 1.5rem;
@@ -1127,14 +1121,17 @@ select{
 .w-10\/12{
   width: 83.333333%;
 }
-.w-44{
-  width: 11rem;
-}
 .w-7{
   width: 1.75rem;
 }
+.w-44{
+  width: 11rem;
+}
 .min-w-0{
   min-width: 0px;
+}
+.min-w-full{
+  min-width: 100%;
 }
 .max-w-screen-xl{
   max-width: 1280px;
@@ -1247,14 +1244,11 @@ select{
 .gap-1{
   gap: 0.25rem;
 }
-.gap-10{
-  gap: 2.5rem;
-}
-.gap-8{
-  gap: 2rem;
-}
 .gap-3{
   gap: 0.75rem;
+}
+.gap-10{
+  gap: 2.5rem;
 }
 .gap-y-8{
   row-gap: 2rem;
@@ -1358,6 +1352,10 @@ select{
 .border-transparent{
   border-color: transparent;
 }
+.border-sky-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(2 132 199 / var(--tw-border-opacity));
+}
 .border-indigo-400{
   --tw-border-opacity: 1;
   border-color: rgb(129 140 248 / var(--tw-border-opacity));
@@ -1369,10 +1367,6 @@ select{
 .border-gray-100{
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
-}
-.border-sky-700{
-  --tw-border-opacity: 1;
-  border-color: rgb(3 105 161 / var(--tw-border-opacity));
 }
 .border-gray-400{
   --tw-border-opacity: 1;
@@ -1406,10 +1400,6 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
-.bg-gray-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
 .bg-red-100{
   --tw-bg-opacity: 1;
   background-color: rgb(254 226 226 / var(--tw-bg-opacity));
@@ -1426,10 +1416,6 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
-.bg-cyan-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(8 145 178 / var(--tw-bg-opacity));
-}
 .bg-sky-600{
   --tw-bg-opacity: 1;
   background-color: rgb(2 132 199 / var(--tw-bg-opacity));
@@ -1438,16 +1424,8 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(224 242 254 / var(--tw-bg-opacity));
 }
-.bg-neutral-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(38 38 38 / var(--tw-bg-opacity));
-}
 .bg-transparent{
   background-color: transparent;
-}
-.bg-sky-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
 }
 .bg-opacity-25{
   --tw-bg-opacity: 0.25;
@@ -1527,9 +1505,9 @@ select{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
 }
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 .pt-6{
   padding-top: 1.5rem;
@@ -1595,13 +1573,13 @@ select{
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 .text-base{
   font-size: 1rem;
@@ -1625,17 +1603,14 @@ select{
 .font-semibold{
   font-weight: 600;
 }
-.font-bold{
-  font-weight: 700;
+.font-extrabold{
+  font-weight: 800;
 }
 .font-normal{
   font-weight: 400;
 }
-.font-black{
-  font-weight: 900;
-}
-.font-extrabold{
-  font-weight: 800;
+.font-bold{
+  font-weight: 700;
 }
 .uppercase{
   text-transform: uppercase;
@@ -1696,10 +1671,6 @@ select{
   --tw-text-opacity: 1;
   color: rgb(67 56 202 / var(--tw-text-opacity));
 }
-.text-green-400{
-  --tw-text-opacity: 1;
-  color: rgb(74 222 128 / var(--tw-text-opacity));
-}
 .text-gray-400{
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -1716,17 +1687,13 @@ select{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
-.text-green-600{
-  --tw-text-opacity: 1;
-  color: rgb(22 163 74 / var(--tw-text-opacity));
-}
-.text-green-500{
-  --tw-text-opacity: 1;
-  color: rgb(34 197 94 / var(--tw-text-opacity));
-}
 .text-orange-400{
   --tw-text-opacity: 1;
   color: rgb(251 146 60 / var(--tw-text-opacity));
+}
+.text-orange-200{
+  --tw-text-opacity: 1;
+  color: rgb(254 215 170 / var(--tw-text-opacity));
 }
 .text-gray-200{
   --tw-text-opacity: 1;
@@ -1885,6 +1852,84 @@ select{
     line-height: 1;
   }
 }
+.hierarchyl2{
+  text-align: left;
+  font-family: Catamaran, sans-serif;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  font-weight: 900;
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+.pageContentTitle{
+  text-align: left;
+  font-family: Catamaran, sans-serif;
+  font-size: 1.5rem;
+  font-weight: 900;
+  line-height: 2.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(251 146 60 / var(--tw-text-opacity));
+}
+@media (min-width: 640px){
+  .pageContentTitle{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+@media (min-width: 768px){
+  .pageContentTitle{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+  .pageContentTitle{
+    line-height: 2.5rem;
+  }
+}
+@media (min-width: 1024px){
+  .pageContentTitle{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+@media (min-width: 1280px){
+  .pageContentTitle{
+    font-size: 6rem;
+    line-height: 1;
+  }
+}
+.modelTitle{
+  text-align: left;
+  font-size: 1.5rem;
+  font-weight: 900;
+  line-height: 2.5rem;
+}
+@media (min-width: 640px){
+  .modelTitle{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+@media (min-width: 768px){
+  .modelTitle{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+  .modelTitle{
+    line-height: 2.5rem;
+  }
+}
+@media (min-width: 1024px){
+  .modelTitle{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+@media (min-width: 1280px){
+  .modelTitle{
+    font-size: 3rem;
+    line-height: 1;
+  }
+}
 .hover\:border-gray-300:hover{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -1896,10 +1941,6 @@ select{
 .hover\:bg-red-600:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-.hover\:bg-gray-700:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 .hover\:bg-red-500:hover{
   --tw-bg-opacity: 1;
@@ -1916,10 +1957,6 @@ select{
 .hover\:bg-indigo-700:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(67 56 202 / var(--tw-bg-opacity));
-}
-.hover\:bg-sky-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
 }
 .hover\:bg-sky-700:hover{
   --tw-bg-opacity: 1;
@@ -1951,14 +1988,6 @@ select{
 }
 .focus\:z-10:focus{
   z-index: 10;
-}
-.focus\:border-blue-300:focus{
-  --tw-border-opacity: 1;
-  border-color: rgb(147 197 253 / var(--tw-border-opacity));
-}
-.focus\:border-gray-900:focus{
-  --tw-border-opacity: 1;
-  border-color: rgb(17 24 39 / var(--tw-border-opacity));
 }
 .focus\:border-indigo-300:focus{
   --tw-border-opacity: 1;
@@ -2030,10 +2059,6 @@ select{
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
-.focus\:ring-gray-300:focus{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
-}
 .focus\:ring-indigo-200:focus{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(199 210 254 / var(--tw-ring-opacity));
@@ -2042,17 +2067,9 @@ select{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(254 202 202 / var(--tw-ring-opacity));
 }
-.focus\:ring-blue-200:focus{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(191 219 254 / var(--tw-ring-opacity));
-}
 .focus\:ring-indigo-500:focus{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
-}
-.focus\:ring-sky-600:focus{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(2 132 199 / var(--tw-ring-opacity));
 }
 .focus\:ring-opacity-50:focus{
   --tw-ring-opacity: 0.5;
@@ -2063,10 +2080,6 @@ select{
 .active\:bg-gray-100:active{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-.active\:bg-gray-900:active{
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 .active\:bg-red-600:active{
   --tw-bg-opacity: 1;
@@ -2282,6 +2295,9 @@ select{
   }
 }
 @media (min-width: 768px){
+  .md\:fixed{
+    position: fixed;
+  }
   .md\:col-span-2{
     grid-column: span 2 / span 2;
   }
@@ -2296,6 +2312,12 @@ select{
   }
   .md\:grid{
     display: grid;
+  }
+  .md\:w-2\/5{
+    width: 40%;
+  }
+  .md\:w-3\/5{
+    width: 60%;
   }
   .md\:w-5\/12{
     width: 41.666667%;
