--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1205,6 +1205,9 @@ select{
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
 .grid-cols-3{
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
@@ -1380,9 +1383,9 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
-.bg-indigo-500{
+.bg-lime-500{
   --tw-bg-opacity: 1;
-  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
+  background-color: rgb(132 204 22 / var(--tw-bg-opacity));
 }
 .bg-red-700{
   --tw-bg-opacity: 1;
@@ -1392,9 +1395,9 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
-.bg-indigo-600{
+.bg-lime-600{
   --tw-bg-opacity: 1;
-  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
+  background-color: rgb(101 163 13 / var(--tw-bg-opacity));
 }
 .bg-red-600{
   --tw-bg-opacity: 1;
@@ -1415,6 +1418,10 @@ select{
 .bg-gray-200{
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+.bg-indigo-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
 }
 .bg-sky-600{
   --tw-bg-opacity: 1;
@@ -1603,6 +1610,9 @@ select{
 .font-semibold{
   font-weight: 600;
 }
+.font-black{
+  font-weight: 900;
+}
 .font-extrabold{
   font-weight: 800;
 }
@@ -1611,6 +1621,12 @@ select{
 }
 .font-bold{
   font-weight: 700;
+}
+.font-extralight{
+  font-weight: 200;
+}
+.font-light{
+  font-weight: 300;
 }
 .uppercase{
   text-transform: uppercase;
@@ -1816,25 +1832,41 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(3 105 161 / var(--tw-bg-opacity));
 }
+.btnDelete{
+  border-radius: 0.25rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  font-weight: 400;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.btnDelete:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
 .hierarchyl1{
   text-align: left;
   font-family: Catamaran, sans-serif;
   font-size: 1.5rem;
-  font-weight: 900;
+  font-weight: 800;
   line-height: 2.5rem;
   --tw-text-opacity: 1;
   color: rgb(251 146 60 / var(--tw-text-opacity));
 }
 @media (min-width: 640px){
   .hierarchyl1{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 @media (min-width: 768px){
   .hierarchyl1{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
   .hierarchyl1{
     line-height: 2.5rem;
@@ -1842,14 +1874,14 @@ select{
 }
 @media (min-width: 1024px){
   .hierarchyl1{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 @media (min-width: 1280px){
   .hierarchyl1{
-    font-size: 3rem;
-    line-height: 1;
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 .hierarchyl2{
@@ -1857,7 +1889,7 @@ select{
   font-family: Catamaran, sans-serif;
   font-size: 1.875rem;
   line-height: 2.25rem;
-  font-weight: 900;
+  font-weight: 800;
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
@@ -1865,7 +1897,7 @@ select{
   text-align: left;
   font-family: Catamaran, sans-serif;
   font-size: 1.5rem;
-  font-weight: 900;
+  font-weight: 800;
   line-height: 2.5rem;
   --tw-text-opacity: 1;
   color: rgb(251 146 60 / var(--tw-text-opacity));
@@ -1893,15 +1925,17 @@ select{
 }
 @media (min-width: 1280px){
   .pageContentTitle{
-    font-size: 6rem;
+    font-size: 3.75rem;
     line-height: 1;
   }
 }
 .modelTitle{
   text-align: left;
   font-size: 1.5rem;
-  font-weight: 900;
+  font-weight: 800;
   line-height: 2.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 @media (min-width: 640px){
   .modelTitle{
@@ -1926,17 +1960,23 @@ select{
 }
 @media (min-width: 1280px){
   .modelTitle{
-    font-size: 3rem;
-    line-height: 1;
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
+}
+.hover\:h-12:hover{
+  height: 3rem;
+}
+.hover\:w-12:hover{
+  width: 3rem;
 }
 .hover\:border-gray-300:hover{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
-.hover\:bg-indigo-600:hover{
+.hover\:bg-lime-600:hover{
   --tw-bg-opacity: 1;
-  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
+  background-color: rgb(101 163 13 / var(--tw-bg-opacity));
 }
 .hover\:bg-red-600:hover{
   --tw-bg-opacity: 1;
@@ -1961,6 +2001,10 @@ select{
 .hover\:bg-sky-700:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(3 105 161 / var(--tw-bg-opacity));
+}
+.hover\:text-6xl:hover{
+  font-size: 3.75rem;
+  line-height: 1;
 }
 .hover\:text-gray-500:hover{
   --tw-text-opacity: 1;
@@ -2008,6 +2052,14 @@ select{
 .focus\:border-indigo-500:focus{
   --tw-border-opacity: 1;
   border-color: rgb(99 102 241 / var(--tw-border-opacity));
+}
+.focus\:border-sky-300:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(125 211 252 / var(--tw-border-opacity));
+}
+.focus\:border-sky-500:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(14 165 233 / var(--tw-border-opacity));
 }
 .focus\:bg-indigo-600:focus{
   --tw-bg-opacity: 1;
@@ -2070,6 +2122,14 @@ select{
 .focus\:ring-indigo-500:focus{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
+}
+.focus\:ring-sky-200:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(186 230 253 / var(--tw-ring-opacity));
+}
+.focus\:ring-sky-500:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(14 165 233 / var(--tw-ring-opacity));
 }
 .focus\:ring-opacity-50:focus{
   --tw-ring-opacity: 0.5;
