--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,16 +7,20 @@
 .btn{
     @apply bg-sky-600 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded;
 }
+.btnDelete{
+    @apply bg-red-400 hover:bg-red-500 text-white font-normal py-1 px-2 rounded;
+}
+
 .hierarchyl1{
-    @apply font-Catamaran text-2xl sm:text-3xl md:text-3xl lg:text-4xl xl:text-5xl text-left text-orange-400 font-black leading-10 md:leading-10;
+    @apply font-Catamaran text-2xl sm:text-2xl md:text-2xl lg:text-3xl xl:text-4xl text-left text-orange-400 font-extrabold leading-10 md:leading-10;
 }
 .hierarchyl2{
-    @apply font-Catamaran text-left font-black text-gray-700 text-3xl;
+    @apply font-Catamaran text-left font-extrabold text-gray-700 text-3xl;
 }
 .pageContentTitle{
-    @apply font-Catamaran text-2xl sm:text-3xl md:text-3xl lg:text-4xl xl:text-8xl text-left text-orange-400 font-black leading-10 md:leading-10;
+    @apply font-Catamaran text-2xl sm:text-3xl md:text-3xl lg:text-4xl xl:text-6xl text-left text-orange-400 font-extrabold leading-10 md:leading-10;
 }
 .modelTitle{
-    @apply text-2xl sm:text-3xl md:text-3xl lg:text-4xl xl:text-5xl text-left font-black leading-10 md:leading-10;
+    @apply text-2xl sm:text-3xl md:text-3xl lg:text-4xl xl:text-4xl text-left font-extrabold text-gray-800 leading-10 md:leading-10;
 
 }
