--- a/public/css/app.css
+++ b/public/css/app.css
@@ -913,6 +913,14 @@ select{
   margin-left: auto;
   margin-right: auto;
 }
+.my-16{
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+.-mx-2{
+  margin-left: -0.5rem;
+  margin-right: -0.5rem;
+}
 .my-12{
   margin-top: 3rem;
   margin-bottom: 3rem;
@@ -992,6 +1000,9 @@ select{
 .mb-5{
   margin-bottom: 1.25rem;
 }
+.mb-1{
+  margin-bottom: 0.25rem;
+}
 .mt-20{
   margin-top: 5rem;
 }
@@ -1006,9 +1017,6 @@ select{
 }
 .mb-12{
   margin-bottom: 3rem;
-}
-.mb-1{
-  margin-bottom: 0.25rem;
 }
 .-mt-px{
   margin-top: -1px;
@@ -1112,6 +1120,9 @@ select{
 .w-20{
   width: 5rem;
 }
+.w-40{
+  width: 10rem;
+}
 .w-32{
   width: 8rem;
 }
@@ -1142,11 +1153,11 @@ select{
 .max-w-xl{
   max-width: 36rem;
 }
-.max-w-6xl{
-  max-width: 72rem;
-}
 .max-w-sm{
   max-width: 24rem;
+}
+.max-w-6xl{
+  max-width: 72rem;
 }
 .flex-1{
   flex: 1 1 0%;
@@ -1210,9 +1221,6 @@ select{
 }
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-.grid-cols-4{
-  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 .flex-row{
   flex-direction: row;
@@ -1336,6 +1344,9 @@ select{
 .border-2{
   border-width: 2px;
 }
+.border-4{
+  border-width: 4px;
+}
 .border-b-2{
   border-bottom-width: 2px;
 }
@@ -1376,6 +1387,10 @@ select{
 .border-gray-100{
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
+}
+.border-white{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 .border-gray-400{
   --tw-border-opacity: 1;
@@ -1452,6 +1467,9 @@ select{
 .bg-no-repeat{
   background-repeat: no-repeat;
 }
+.fill-current{
+  fill: currentColor;
+}
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -1521,6 +1539,10 @@ select{
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+.py-16{
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 .pt-6{
   padding-top: 1.5rem;
@@ -1622,11 +1644,11 @@ select{
 .font-light{
   font-weight: 300;
 }
-.font-normal{
-  font-weight: 400;
-}
 .font-bold{
   font-weight: 700;
+}
+.font-normal{
+  font-weight: 400;
 }
 .uppercase{
   text-transform: uppercase;
@@ -1683,13 +1705,13 @@ select{
   --tw-text-opacity: 1;
   color: rgb(251 146 60 / var(--tw-text-opacity));
 }
-.text-gray-900{
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
 .text-indigo-700{
   --tw-text-opacity: 1;
   color: rgb(67 56 202 / var(--tw-text-opacity));
+}
+.text-gray-900{
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 .text-gray-400{
   --tw-text-opacity: 1;
@@ -1806,6 +1828,9 @@ select{
 }
 .duration-300{
   transition-duration: 300ms;
+}
+.duration-100{
+  transition-duration: 100ms;
 }
 .ease-in-out{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -2002,13 +2027,13 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(3 105 161 / var(--tw-bg-opacity));
 }
-.hover\:text-6xl:hover{
-  font-size: 3.75rem;
-  line-height: 1;
-}
 .hover\:text-4xl:hover{
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+.hover\:text-6xl:hover{
+  font-size: 3.75rem;
+  line-height: 1;
 }
 .hover\:text-gray-500:hover{
   --tw-text-opacity: 1;
