--- a/public/css/app.css
+++ b/public/css/app.css
@@ -909,46 +909,22 @@ select{
 .col-span-3{
   grid-column: span 3 / span 3;
 }
-.col-span-1{
-  grid-column: span 1 / span 1;
-}
-.col-span-2{
-  grid-column: span 2 / span 2;
+.col-start-1{
+  grid-column-start: 1;
 }
 .col-start-2{
   grid-column-start: 2;
 }
-.col-start-1{
-  grid-column-start: 1;
-}
 .col-start-3{
   grid-column-start: 3;
-}
-.row-start-2{
-  grid-row-start: 2;
-}
-.row-start-1{
-  grid-row-start: 1;
 }
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
 }
-.my-1{
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
-}
 .my-12{
   margin-top: 3rem;
   margin-bottom: 3rem;
-}
-.my-0\.5{
-  margin-top: 0.125rem;
-  margin-bottom: 0.125rem;
-}
-.my-0{
-  margin-top: 0px;
-  margin-bottom: 0px;
 }
 .ml-3{
   margin-left: 0.75rem;
@@ -1022,6 +998,9 @@ select{
 .ml-auto{
   margin-left: auto;
 }
+.mb-1{
+  margin-bottom: 0.25rem;
+}
 .mb-5{
   margin-bottom: 1.25rem;
 }
@@ -1039,9 +1018,6 @@ select{
 }
 .mb-12{
   margin-bottom: 3rem;
-}
-.mb-1{
-  margin-bottom: 0.25rem;
 }
 .-mt-px{
   margin-top: -1px;
@@ -1091,20 +1067,26 @@ select{
 .h-40{
   height: 10rem;
 }
-.h-48{
-  height: 12rem;
+.h-11{
+  height: 2.75rem;
+}
+.h-7{
+  height: 1.75rem;
+}
+.h-52{
+  height: 13rem;
+}
+.h-full{
+  height: 100%;
+}
+.h-24{
+  height: 6rem;
 }
 .h-89{
   height: 89px;
 }
 .h-756{
   height: 756px;
-}
-.h-11{
-  height: 2.75rem;
-}
-.h-7{
-  height: 1.75rem;
 }
 .min-h-screen{
   min-height: 100vh;
@@ -1148,6 +1130,9 @@ select{
 .w-20{
   width: 5rem;
 }
+.w-7{
+  width: 1.75rem;
+}
 .w-32{
   width: 8rem;
 }
@@ -1159,9 +1144,6 @@ select{
 }
 .w-10\/12{
   width: 83.333333%;
-}
-.w-7{
-  width: 1.75rem;
 }
 .w-44{
   width: 11rem;
@@ -1262,6 +1244,9 @@ select{
 .items-start{
   align-items: flex-start;
 }
+.items-end{
+  align-items: flex-end;
+}
 .items-center{
   align-items: center;
 }
@@ -1295,15 +1280,14 @@ select{
 .gap-10{
   gap: 2.5rem;
 }
-.gap-x-44{
-  -moz-column-gap: 11rem;
-       column-gap: 11rem;
+.gap-y-4{
+  row-gap: 1rem;
+}
+.gap-y-2{
+  row-gap: 0.5rem;
 }
 .gap-y-8{
   row-gap: 2rem;
-}
-.gap-y-4{
-  row-gap: 1rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
@@ -1465,6 +1449,9 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
+.bg-transparent{
+  background-color: transparent;
+}
 .bg-sky-600{
   --tw-bg-opacity: 1;
   background-color: rgb(2 132 199 / var(--tw-bg-opacity));
@@ -1476,9 +1463,6 @@ select{
 .bg-gray-800{
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-.bg-transparent{
-  background-color: transparent;
 }
 .bg-opacity-25{
   --tw-bg-opacity: 0.25;
@@ -1561,6 +1545,18 @@ select{
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+.px-12{
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+.px-20{
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .pt-6{
   padding-top: 1.5rem;
@@ -1659,17 +1655,20 @@ select{
 .font-extrabold{
   font-weight: 800;
 }
+.font-bold{
+  font-weight: 700;
+}
 .font-light{
   font-weight: 300;
 }
 .font-normal{
   font-weight: 400;
 }
-.font-bold{
-  font-weight: 700;
-}
 .uppercase{
   text-transform: uppercase;
+}
+.italic{
+  font-style: italic;
 }
 .leading-5{
   line-height: 1.25rem;
@@ -1763,6 +1762,10 @@ select{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
 }
+.line-through{
+  -webkit-text-decoration-line: line-through;
+          text-decoration-line: line-through;
+}
 .antialiased{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -1803,6 +1806,12 @@ select{
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.outline{
+  outline-style: solid;
+}
+.outline-orange-100{
+  outline-color: #ffedd5;
 }
 .ring-1{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -1965,7 +1974,7 @@ select{
 }
 @media (min-width: 1280px){
   .pageContentTitle{
-    font-size: 3.75rem;
+    font-size: 3rem;
     line-height: 1;
   }
 }
@@ -2004,23 +2013,23 @@ select{
     line-height: 2.25rem;
   }
 }
-.hover\:h-12:hover{
-  height: 3rem;
-}
 .hover\:h-8:hover{
   height: 2rem;
 }
 .hover\:h-6:hover{
   height: 1.5rem;
 }
-.hover\:w-12:hover{
-  width: 3rem;
+.hover\:h-12:hover{
+  height: 3rem;
 }
 .hover\:w-8:hover{
   width: 2rem;
 }
 .hover\:w-6:hover{
   width: 1.5rem;
+}
+.hover\:w-12:hover{
+  width: 3rem;
 }
 .hover\:border-sky-600:hover{
   --tw-border-opacity: 1;
@@ -2054,13 +2063,21 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(3 105 161 / var(--tw-bg-opacity));
 }
-.hover\:text-4xl:hover{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
 .hover\:text-6xl:hover{
   font-size: 3.75rem;
   line-height: 1;
+}
+.hover\:text-3xl:hover{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+.hover\:text-2xl:hover{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+.hover\:text-4xl:hover{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 .hover\:text-gray-500:hover{
   --tw-text-opacity: 1;
@@ -2413,6 +2430,12 @@ select{
   .md\:grid{
     display: grid;
   }
+  .md\:w-4\/12{
+    width: 33.333333%;
+  }
+  .md\:w-8\/12{
+    width: 66.666667%;
+  }
   .md\:w-2\/5{
     width: 40%;
   }
@@ -2423,12 +2446,6 @@ select{
     width: 41.666667%;
   }
   .md\:w-2\/3{
-    width: 66.666667%;
-  }
-  .md\:w-4\/12{
-    width: 33.333333%;
-  }
-  .md\:w-8\/12{
     width: 66.666667%;
   }
   .md\:grid-cols-3{
