--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1148,6 +1148,9 @@ select{
 .w-44{
   width: 11rem;
 }
+.w-80{
+  width: 20rem;
+}
 .min-w-0{
   min-width: 0px;
 }
@@ -1280,6 +1283,18 @@ select{
 .gap-10{
   gap: 2.5rem;
 }
+.gap-5{
+  gap: 1.25rem;
+}
+.gap-8{
+  gap: 2rem;
+}
+.gap-12{
+  gap: 3rem;
+}
+.gap-14{
+  gap: 3.5rem;
+}
 .gap-y-4{
   row-gap: 1rem;
 }
@@ -1308,6 +1323,17 @@ select{
   --tw-space-x-reverse: 0;
   margin-right: calc(20rem * var(--tw-space-x-reverse));
   margin-left: calc(20rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.divide-y > :not([hidden]) ~ :not([hidden]){
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
+.divide-dashed > :not([hidden]) ~ :not([hidden]){
+  border-style: dashed;
+}
+.divide-dotted > :not([hidden]) ~ :not([hidden]){
+  border-style: dotted;
 }
 .overflow-hidden{
   overflow: hidden;
@@ -1359,6 +1385,9 @@ select{
 }
 .border-2{
   border-width: 2px;
+}
+.border-4{
+  border-width: 4px;
 }
 .border-b-2{
   border-bottom-width: 2px;
@@ -1464,6 +1493,10 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
+.bg-orange-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
+}
 .bg-opacity-25{
   --tw-bg-opacity: 0.25;
 }
@@ -1550,13 +1583,13 @@ select{
   padding-left: 3rem;
   padding-right: 3rem;
 }
-.px-20{
-  padding-left: 5rem;
-  padding-right: 5rem;
+.py-24{
+  padding-top: 6rem;
+  padding-bottom: 6rem;
 }
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
+.px-24{
+  padding-left: 6rem;
+  padding-right: 6rem;
 }
 .pt-6{
   padding-top: 1.5rem;
@@ -1809,6 +1842,15 @@ select{
 }
 .outline{
   outline-style: solid;
+}
+.outline-dashed{
+  outline-style: dashed;
+}
+.outline-offset-1{
+  outline-offset: 1px;
+}
+.outline-offset-0{
+  outline-offset: 0px;
 }
 .outline-orange-100{
   outline-color: #ffedd5;
@@ -2074,10 +2116,6 @@ select{
 .hover\:text-2xl:hover{
   font-size: 1.5rem;
   line-height: 2rem;
-}
-.hover\:text-4xl:hover{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 .hover\:text-gray-500:hover{
   --tw-text-opacity: 1;
