--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1551,6 +1551,10 @@ select{
   padding-left: 3rem;
   padding-right: 3rem;
 }
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 .pt-6{
   padding-top: 1.5rem;
 }
@@ -2477,6 +2481,9 @@ select{
   }
   .lg\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
   .lg\:px-8{
     padding-left: 2rem;
