--- a/public/css/app.css
+++ b/public/css/app.css
@@ -998,9 +998,6 @@ select{
 .ml-auto{
   margin-left: auto;
 }
-.mb-1{
-  margin-bottom: 0.25rem;
-}
 .mb-5{
   margin-bottom: 1.25rem;
 }
@@ -1019,8 +1016,8 @@ select{
 .mb-12{
   margin-bottom: 3rem;
 }
-.-mt-px{
-  margin-top: -1px;
+.mb-1{
+  margin-bottom: 0.25rem;
 }
 .block{
   display: block;
@@ -1067,6 +1064,12 @@ select{
 .h-40{
   height: 10rem;
 }
+.h-89{
+  height: 89px;
+}
+.h-756{
+  height: 756px;
+}
 .h-11{
   height: 2.75rem;
 }
@@ -1075,12 +1078,6 @@ select{
 }
 .h-full{
   height: 100%;
-}
-.h-89{
-  height: 89px;
-}
-.h-756{
-  height: 756px;
 }
 .min-h-screen{
   min-height: 100vh;
@@ -1127,9 +1124,6 @@ select{
 .w-20{
   width: 5rem;
 }
-.w-7{
-  width: 1.75rem;
-}
 .w-32{
   width: 8rem;
 }
@@ -1141,6 +1135,9 @@ select{
 }
 .w-44{
   width: 11rem;
+}
+.w-7{
+  width: 1.75rem;
 }
 .min-w-0{
   min-width: 0px;
@@ -1156,9 +1153,6 @@ select{
 }
 .max-w-xl{
   max-width: 36rem;
-}
-.max-w-6xl{
-  max-width: 72rem;
 }
 .max-w-sm{
   max-width: 24rem;
@@ -1223,6 +1217,9 @@ select{
 .grid-cols-3{
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
+.grid-cols-7{
+  grid-template-columns: repeat(7, minmax(0, 1fr));
+}
 .flex-row{
   flex-direction: row;
 }
@@ -1265,26 +1262,26 @@ select{
 .gap-1{
   gap: 0.25rem;
 }
-.gap-8{
-  gap: 2rem;
-}
-.gap-14{
-  gap: 3.5rem;
-}
 .gap-3{
   gap: 0.75rem;
 }
 .gap-10{
   gap: 2.5rem;
 }
+.gap-8{
+  gap: 2rem;
+}
+.gap-14{
+  gap: 3.5rem;
+}
 .gap-y-4{
   row-gap: 1rem;
 }
-.gap-y-3{
-  row-gap: 0.75rem;
-}
 .gap-y-8{
   row-gap: 2rem;
+}
+.gap-y-3{
+  row-gap: 0.75rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
@@ -1398,10 +1395,6 @@ select{
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
-.border-gray-400{
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
-}
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1446,9 +1439,6 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
-.bg-transparent{
-  background-color: transparent;
-}
 .bg-sky-600{
   --tw-bg-opacity: 1;
   background-color: rgb(2 132 199 / var(--tw-bg-opacity));
@@ -1461,9 +1451,8 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
-.bg-red-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+.bg-transparent{
+  background-color: transparent;
 }
 .bg-opacity-25{
   --tw-bg-opacity: 0.25;
@@ -1551,10 +1540,6 @@ select{
   padding-left: 3rem;
   padding-right: 3rem;
 }
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
 .pt-6{
   padding-top: 1.5rem;
 }
@@ -1590,9 +1575,6 @@ select{
 }
 .pb-20{
   padding-bottom: 5rem;
-}
-.pt-8{
-  padding-top: 2rem;
 }
 .text-left{
   text-align: left;
@@ -1655,11 +1637,11 @@ select{
 .font-bold{
   font-weight: 700;
 }
-.font-light{
-  font-weight: 300;
-}
 .font-normal{
   font-weight: 400;
+}
+.font-light{
+  font-weight: 300;
 }
 .uppercase{
   text-transform: uppercase;
@@ -1679,17 +1661,14 @@ select{
 .leading-4{
   line-height: 1rem;
 }
-.leading-6{
-  line-height: 1.5rem;
-}
 .leading-normal{
   line-height: 1.5;
 }
+.leading-6{
+  line-height: 1.5rem;
+}
 .tracking-widest{
   letter-spacing: 0.1em;
-}
-.tracking-wider{
-  letter-spacing: 0.05em;
 }
 .text-gray-500{
   --tw-text-opacity: 1;
@@ -1746,14 +1725,6 @@ select{
 .text-orange-200{
   --tw-text-opacity: 1;
   color: rgb(254 215 170 / var(--tw-text-opacity));
-}
-.text-gray-200{
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-.text-gray-300{
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 .underline{
   -webkit-text-decoration-line: underline;
@@ -1938,6 +1909,15 @@ select{
   font-weight: 800;
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+.hierarchyl3{
+  text-align: left;
+  font-family: Catamaran, sans-serif;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(251 146 60 / var(--tw-text-opacity));
 }
 .pageContentTitle{
   text-align: left;
@@ -2328,9 +2308,6 @@ select{
   .sm\:items-center{
     align-items: center;
   }
-  .sm\:justify-start{
-    justify-content: flex-start;
-  }
   .sm\:justify-center{
     justify-content: center;
   }
@@ -2422,12 +2399,6 @@ select{
   .md\:grid{
     display: grid;
   }
-  .md\:w-4\/12{
-    width: 33.333333%;
-  }
-  .md\:w-8\/12{
-    width: 66.666667%;
-  }
   .md\:w-2\/5{
     width: 40%;
   }
@@ -2438,6 +2409,12 @@ select{
     width: 41.666667%;
   }
   .md\:w-2\/3{
+    width: 66.666667%;
+  }
+  .md\:w-4\/12{
+    width: 33.333333%;
+  }
+  .md\:w-8\/12{
     width: 66.666667%;
   }
   .md\:grid-cols-3{
@@ -2479,11 +2456,11 @@ select{
   .lg\:w-10\/12{
     width: 83.333333%;
   }
-  .lg\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
   .lg\:px-8{
     padding-left: 2rem;
