adding_the-project_name_as_tag_to_actions_in_the_today_and_week_pages_plus_some_small_css_fixes

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -912,15 +912,17 @@ select{
 .col-start-1{
   grid-column-start: 1;
 }
-.col-start-2{
-  grid-column-start: 2;
-}
-.col-start-3{
-  grid-column-start: 3;
-}
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+.mx-5{
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+.my-12{
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 .my-2{
   margin-top: 0.5rem;
@@ -929,10 +931,6 @@ select{
 .-mx-2{
   margin-left: -0.5rem;
   margin-right: -0.5rem;
-}
-.my-12{
-  margin-top: 3rem;
-  margin-bottom: 3rem;
 }
 .ml-3{
   margin-left: 0.75rem;
@@ -1027,9 +1025,6 @@ select{
 .mb-12{
   margin-bottom: 3rem;
 }
-.-mt-px{
-  margin-top: -1px;
-}
 .block{
   display: block;
 }
@@ -1081,9 +1076,6 @@ select{
 .h-7{
   height: 1.75rem;
 }
-.h-32{
-  height: 8rem;
-}
 .h-full{
   height: 100%;
 }
@@ -1098,6 +1090,9 @@ select{
 }
 .min-h-\[2rem\]{
   min-height: 2rem;
+}
+.min-h-\[6rem\]{
+  min-height: 6rem;
 }
 .min-h-\[8rem\]{
   min-height: 8rem;
@@ -1144,20 +1139,29 @@ select{
 .w-7{
   width: 1.75rem;
 }
-.w-40{
-  width: 10rem;
-}
 .w-32{
   width: 8rem;
+}
+.w-36{
+  width: 9rem;
 }
 .w-16{
   width: 4rem;
 }
+.w-\[2\.5rem\]{
+  width: 2.5rem;
+}
 .w-10\/12{
   width: 83.333333%;
 }
+.w-\[3\.5rem\]{
+  width: 3.5rem;
+}
 .w-44{
   width: 11rem;
+}
+.w-40{
+  width: 10rem;
 }
 .min-w-0{
   min-width: 0px;
@@ -1173,9 +1177,6 @@ select{
 }
 .max-w-xl{
   max-width: 36rem;
-}
-.max-w-6xl{
-  max-width: 72rem;
 }
 .max-w-sm{
   max-width: 24rem;
@@ -1251,9 +1252,6 @@ select{
 }
 .items-start{
   align-items: flex-start;
-}
-.items-end{
-  align-items: flex-end;
 }
 .items-center{
   align-items: center;
@@ -1425,10 +1423,6 @@ select{
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
-.border-gray-400{
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
-}
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1577,6 +1571,14 @@ select{
   padding-left: 3rem;
   padding-right: 3rem;
 }
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
 .pt-6{
   padding-top: 1.5rem;
 }
@@ -1607,14 +1609,11 @@ select{
 .pb-1{
   padding-bottom: 0.25rem;
 }
-.pt-16{
-  padding-top: 4rem;
+.pt-8{
+  padding-top: 2rem;
 }
 .pb-20{
   padding-bottom: 5rem;
-}
-.pt-8{
-  padding-top: 2rem;
 }
 .text-left{
   text-align: left;
@@ -1710,9 +1709,6 @@ select{
 .tracking-widest{
   letter-spacing: 0.1em;
 }
-.tracking-wider{
-  letter-spacing: 0.05em;
-}
 .text-gray-500{
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1769,14 +1765,6 @@ select{
   --tw-text-opacity: 1;
   color: rgb(254 215 170 / var(--tw-text-opacity));
 }
-.text-gray-200{
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-.text-gray-300{
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
 .underline{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1828,6 +1816,10 @@ select{
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.outline-none{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 .ring-1{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -1973,43 +1965,15 @@ select{
 .pageContentTitle{
   text-align: left;
   font-family: Catamaran, sans-serif;
-  font-size: 1.5rem;
-  font-weight: 800;
-  line-height: 2.5rem;
+  font-size: 3rem;
+  line-height: 1;
+  font-weight: 900;
   --tw-text-opacity: 1;
   color: rgb(251 146 60 / var(--tw-text-opacity));
 }
-@media (min-width: 640px){
-  .pageContentTitle{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-}
-@media (min-width: 768px){
-  .pageContentTitle{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-  .pageContentTitle{
-    line-height: 2.5rem;
-  }
-}
-@media (min-width: 1024px){
-  .pageContentTitle{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-}
-@media (min-width: 1280px){
-  .pageContentTitle{
-    font-size: 3rem;
-    line-height: 1;
-  }
-}
 .modelTitle{
   text-align: left;
-  font-size: 1.5rem;
-  font-weight: 800;
+  font-weight: 300;
   line-height: 2.5rem;
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
@@ -2031,14 +1995,14 @@ select{
 }
 @media (min-width: 1024px){
   .modelTitle{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 @media (min-width: 1280px){
   .modelTitle{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 .hover\:h-6:hover{
@@ -2091,13 +2055,11 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(3 105 161 / var(--tw-bg-opacity));
 }
-.hover\:text-6xl:hover{
-  font-size: 3.75rem;
-  line-height: 1;
+.hover\:font-black:hover{
+  font-weight: 900;
 }
-.hover\:text-3xl:hover{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.hover\:font-bold:hover{
+  font-weight: 700;
 }
 .hover\:text-gray-500:hover{
   --tw-text-opacity: 1;
@@ -2241,16 +2203,6 @@ select{
 .disabled\:opacity-25:disabled{
   opacity: 0.25;
 }
-@media (prefers-color-scheme: dark){
-  .dark\:bg-gray-900{
-    --tw-bg-opacity: 1;
-    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-  }
-  .dark\:text-gray-500{
-    --tw-text-opacity: 1;
-    color: rgb(107 114 128 / var(--tw-text-opacity));
-  }
-}
 @media (min-width: 640px){
   .sm\:col-span-4{
     grid-column: span 4 / span 4;
@@ -2359,9 +2311,6 @@ select{
   .sm\:items-center{
     align-items: center;
   }
-  .sm\:justify-start{
-    justify-content: flex-start;
-  }
   .sm\:justify-center{
     justify-content: center;
   }
@@ -2453,6 +2402,9 @@ select{
   .md\:grid{
     display: grid;
   }
+  .md\:min-h-screen{
+    min-height: 100vh;
+  }
   .md\:w-4\/12{
     width: 33.333333%;
   }
@@ -2476,6 +2428,9 @@ select{
   }
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .md\:grid-cols-1{
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
   .md\:flex-row{
     flex-direction: row;
@@ -2504,8 +2459,8 @@ select{
   .lg\:col-span-4{
     grid-column: span 4 / span 4;
   }
-  .lg\:flex{
-    display: flex;
+  .lg\:min-h-screen{
+    min-height: 100vh;
   }
   .lg\:w-10\/12{
     width: 83.333333%;
@@ -2513,12 +2468,29 @@ select{
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
+  .lg\:grid-cols-6{
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
   .lg\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .lg\:flex-row{
+    flex-direction: row;
+  }
+  .lg\:items-end{
+    align-items: flex-end;
   }
   .lg\:px-8{
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+  .lg\:px-1{
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+  }
+  .lg\:py-6{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
   }
   .lg\:text-xl{
     font-size: 1.25rem;
@@ -2526,5 +2498,13 @@ select{
   }
   .lg\:font-bold{
     font-weight: 700;
+  }
+}
+@media (min-width: 1280px){
+  .xl\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  .xl\:grid-cols-6{
+    grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 }
