--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -21,9 +21,9 @@
     @apply font-Catamaran text-left font-bold text-orange-400 text-2xl;
 }
 .pageContentTitle{
-    @apply font-Catamaran text-2xl sm:text-3xl md:text-3xl lg:text-4xl xl:text-5xl text-left text-orange-400 font-extrabold leading-10 md:leading-10;
+    @apply font-Catamaran text-5xl text-left text-orange-400 font-black;
 }
 .modelTitle{
-    @apply text-2xl sm:text-2xl md:text-2xl lg:text-3xl xl:text-3xl text-left font-extrabold text-gray-800 leading-10 md:leading-10;
+    @apply sm:text-2xl md:text-2xl lg:text-2xl xl:text-2xl text-left font-light text-gray-800 leading-10 md:leading-10;
 
 }
